--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,3 +4,15 @@
   padding: 2rem;
   text-align: center;
 }
+
+#signInDiv {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
