--- a/client/src/Display.module.css
+++ b/client/src/Display.module.css
@@ -3,15 +3,13 @@
   width: 700px;
   white-space: normal;
   margin-top: 20px;
-  background-color: #333333;
+  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 20px;
   box-shadow: 0px 0px 10px 0px #181818;
   transition: all 0.4s;
   position: relative;
   padding: 20px;
-}
-.container_editing {
-  border: 1px solid white;
+  color: var(--text);
 }
 
 .para {
@@ -32,7 +30,7 @@
   position: absolute;
   right: -40px;
   top: 0;
-  background-color: #181818;
+  background-color: var(--secondary);
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -47,7 +45,7 @@
   position: absolute;
   right: -40px;
   top: 0;
-  background-color: #181818;
+  background-color: var(--secondary);
   width: 40px;
   height: 40px;
   border-radius: 50%;
