--- a/client/src/SearchBar.module.css
+++ b/client/src/SearchBar.module.css
@@ -1,26 +1,31 @@
 .search_bar {
-  display: flex;
   position: relative;
+  display: flex;
+  width: 80%;
+  margin: 0 auto;
+  justify-content: space-between;
+  /* top: 10rem; */
 }
 
 .search_bar input {
-  width: 400px;
+  width: 80%;
   padding-left: 20px;
-  border-radius: 8px 0px 0px 8px;
+  border-radius: 1rem;
   text-decoration: none;
+  outline: none;
+  border: none;
+  color: var(--text);
 }
+
 .valid_input {
   border: none;
 }
 .invalid_input {
   border: 1px solid red;
 }
-/* input:focus {s
-  outline: 2px solid #ff6347; 
-} */
 
 .search_bar button {
-  border-radius: 0px 8px 8px 0px;
+  border-radius: 1rem;
   text-decoration: none;
 }
 
@@ -28,4 +33,22 @@
   position: absolute;
   top: -40px;
   color: rgb(236, 52, 52);
+}
+
+@media screen and (min-width: 1080px) {
+  .search_bar {
+    width: 50%;
+  }
+  .search_bar input {
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 1680px) {
+  .search_bar {
+    width: 40%;
+  }
+  .search_bar input {
+    width: 81%;
+  }
 }
